Upgraded to Gradle 8.5. Fixed most pending deprecated methods. fixed warnings for a clean build.