@@ -36,8 +36,8 @@ public class CacheUtil {
 		info.setEL("last_hit", ce.lastHit());
 		info.setEL("last_modified", ce.lastModified());
 
-		info.setEL("hit_count", new Double(ce.hitCount()));
-		info.setEL("size", new Double(ce.size()));
+		info.setEL("hit_count", Double.valueOf(ce.hitCount()));
+		info.setEL("size", Double.valueOf(ce.size()));
 		
 		
 		info.setEL("idle_time_span", toTimespan(ce.idleTimeSpan()));		
@@ -52,9 +52,9 @@ public class CacheUtil {
 		Struct info=new StructImpl();
 
 		long value = c.hitCount();
-		if(value>=0)info.setEL("hit_count", new Double(value));
+		if(value>=0)info.setEL("hit_count", Double.valueOf(value));
 		value = c.missCount();
-		if(value>=0)info.setEL("miss_count", new Double(value));
+		if(value>=0)info.setEL("miss_count", Double.valueOf(value));
 		
 		return info;
 	}
