@@ -58,12 +58,12 @@ public abstract class EHCacheSupport extends CacheSupport implements Cache,Cache
 		Struct info=super.getCustomInfo();
 		// custom
 		CacheConfiguration conf = getCache().getCacheConfiguration();
-		info.setEL("disk_expiry_thread_interval", new Double(conf.getDiskExpiryThreadIntervalSeconds()));
-		info.setEL("disk_spool_buffer_size", new Double(conf.getDiskSpoolBufferSizeMB()*1024*1024));
-		info.setEL("max_elements_in_memory", new Double(conf.getMaxElementsInMemory()));
-		info.setEL("max_elements_on_disk", new Double(conf.getMaxElementsOnDisk()));
-		info.setEL("time_to_idle", new Double(conf.getTimeToIdleSeconds()));
-		info.setEL("time_to_live", new Double(conf.getTimeToLiveSeconds()));
+		info.setEL("disk_expiry_thread_interval", Double.valueOf(conf.getDiskExpiryThreadIntervalSeconds()));
+		info.setEL("disk_spool_buffer_size", Double.valueOf(conf.getDiskSpoolBufferSizeMB()*1024*1024));
+		info.setEL("max_elements_in_memory", Double.valueOf(conf.getMaxElementsInMemory()));
+		info.setEL("max_elements_on_disk", Double.valueOf(conf.getMaxElementsOnDisk()));
+		info.setEL("time_to_idle", Double.valueOf(conf.getTimeToIdleSeconds()));
+		info.setEL("time_to_live", Double.valueOf(conf.getTimeToLiveSeconds()));
 		info.setEL(KeyConstants._name, conf.getName());
 		return info;
 	}
@@ -76,8 +76,8 @@ public abstract class EHCacheSupport extends CacheSupport implements Cache,Cache
 	@Override
 	public void put(String key, Object value, Long idleTime, Long liveTime) {
 		Boolean eternal = idleTime==null && liveTime==null?Boolean.TRUE:Boolean.FALSE;
-		Integer idle = idleTime==null?null : new Integer( (int)(idleTime.longValue()/1000) );
-		Integer live = liveTime==null?null : new Integer( (int)(liveTime.longValue()/1000) );
+		Integer idle = idleTime==null?null : Integer.valueOf( (int)(idleTime.longValue()/1000) );
+		Integer live = liveTime==null?null : Integer.valueOf( (int)(liveTime.longValue()/1000) );
 		getCache().put(new Element(key, value ,eternal, idle, live));
 	}
 
