@@ -169,7 +169,7 @@ public final class DatabaseException extends PageExceptionImpl {
 		if(StringUtil.isEmpty(datasourceName))datasourceName=Caster.toString(getAdditional().get("DataSource", ""),"");
 		
 		CatchBlock sct = super.getCatchBlock(config);
-		sct.setEL("NativeErrorCode",new Double(errorcode));
+		sct.setEL("NativeErrorCode",Double.valueOf(errorcode));
 		sct.setEL("DataSource",datasourceName);
 		sct.setEL("SQLState",sqlstate);
 		sct.setEL("Sql",strSQL);
