@@ -162,7 +162,7 @@ public class TransitionFilter extends AbstractBufferedImageOp  implements DynFil
      */
 	public void prepareFilter( float transition ) {
         try {
-            method.invoke( filter, new Object[] { new Float( transition ) } );
+            method.invoke( filter, new Object[] { Float.valueOf( transition ) } );
         }
         catch ( Exception e ) {
             throw new IllegalArgumentException("Error setting value for property: "+property);
