@@ -154,7 +154,7 @@ public abstract class StorageScopeImpl extends StructSupport implements StorageS
 		lastvisit=System.currentTimeMillis();
 		
 		if(type==SCOPE_CLIENT){
-			sct.setEL(HITCOUNT, new Double(hitcount++));
+			sct.setEL(HITCOUNT, Double.valueOf(hitcount++));
 		}
 		else {
 			sct.setEL(SESSION_ID, pc.getApplicationContext().getName()+"_"+pc.getCFID()+"_"+pc.getCFToken());
@@ -203,7 +203,7 @@ public abstract class StorageScopeImpl extends StructSupport implements StorageS
 		sct.setEL(TIMECREATED, timecreated);
 		
 		if(type==SCOPE_CLIENT){
-			sct.setEL(HITCOUNT, new Double(hitcount));
+			sct.setEL(HITCOUNT, Double.valueOf(hitcount));
 		}
 	}
 	
